--- a/public/home.html
+++ b/public/home.html
@@ -61,6 +61,7 @@
         <li><a href="login">Login</a></li>
         <li><a href="delete">Delete</a></li>
         <li><a href="update">Update</a></li>
+        <li><a href="search">Search</a></li>
     </ul>
 </div>
 
